--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         </div>
                       </div>
                       <p id="info" class=""></p>
-                      <!-- infossss  -->
+                      <!-- infos  -->
                     <div class="row mb-3">
                       <div class="col-sm-10 offset-sm-2">
                       </div>
