--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="card border-0 col" id="card">
             <div class="card-body">
-                <form>
+                <form action="list.html" id="form">
                     <div class="row mb-3">
                       <div class="col-sm-10">
                         <input type="text"  placeholder="Votre Nom.." class="form-control" id="inputName" required>
